-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.2.0 Alpha
-
None
-
386a5b85b7fa201e26e8795373d77457728c806a (qt/qtdeclarative/dev) 81c37aa5f4178c60abe64f204e5b7879ff9e2e0c (qt/qtdeclarative/6.2)
agent:2021/06/16 00:51:18 build.go:391: 2: QFATAL : tst_controls::Basic::ComboBox::test_reopen_popup() ASSERT: "m_palette" in file include/QtQuick/6.2.0/QtQuick/private/../../../../../src/quick/items/qquickpaletteproviderprivatebase_p.h, line 403 agent:2021/06/16 00:51:18 build.go:391: 2: FAIL! : tst_controls::Basic::ComboBox::test_reopen_popup() Received a fatal error. agent:2021/06/16 00:51:18 build.go:391: 2: Loc: [Unknown file(0)] agent:2021/06/16 00:51:18 build.go:391: 2: Totals: 241 passed, 1 failed, 0 skipped, 0 blacklisted, 12782ms agent:2021/06/16 00:51:18 build.go:391: 2: ********* Finished testing of tst_controls::Basic ********* agent:2021/06/16 00:51:18 build.go:391: 2: CMake Error at tst_basicWrapperDebug.cmake:17 (message): agent:2021/06/16 00:51:18 build.go:391: 2: agent:2021/06/16 00:51:18 build.go:391: 2: /home/qt/work/qt/qtquickcontrols2_standalone_tests/tests/auto/controls/basic/tst_basic agent:2021/06/16 00:51:18 build.go:391: 2: execution failed. agent:2021/06/16 00:51:18 build.go:391: 2: agent:2021/06/16 00:51:18 build.go:391: 2: agent:2021/06/16 00:51:18 build.go:391: 2/39 Test #2: tst_basic .............................***Failed 13.19 sec agent:2021/06/16 00:51:18 build.go:391: Start 2: tst_basic agent:2021/06/16 00:51:18 build.go:391: 2: Test command: /opt/cmake-3.19.2/bin/cmake "-P" "/home/qt/work/qt/qtquickcontrols2_standalone_tests/tests/auto/controls/basic/tst_basicWrapperDebug.cmake" agent:2021/06/16 00:51:18 build.go:391: 2: Test timeout computed to be: 1500 agent:2021/06/16 00:51:18 build.go:391: 2: No protocol specified
Details: https://testresults.qt.io/coin/integration/qt/qtquickcontrols2/tasks/1623804556
Tested changes (refs/builds/qtci/6.2/1623804510):
https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/354558/2 Update dependencies on '6.2' in qt/qtquickcontrols2
| For Gerrit Dashboard: QTBUG-94533 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 354439,4 | QQuickPaletteProviderPrivateBase: Do not use paletteData() directly | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 354614,2 | QQuickPaletteProviderPrivateBase: Do not use paletteData() directly | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |