QQuickPaletteProviderPrivateBase: Do not use paletteData() directly

Subclasses may override palette() and paletteData() may not be the
actual source of the palette data. QQuickPopupItemPrivate in
qtquickcontrols2 does this.

Fixes: QTBUG-94533
Change-Id: I0434aafab8d0e9fc97f06c04c8dfaef738f4bf09
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 386a5b85b7fa201e26e8795373d77457728c806a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>